# rdf-delta-load-test

./: .env-template  .gitignore  README.md  Taskfile.yaml  pyproject.toml  requirements.txt
docker/: compose.yaml  config.ttl  overrides.yaml
scripts/: config.py  formatting.py  main.py  temp.py  utils.py
scripts/data/: destinations.csv
scripts/queries/: fts.rq.j2  full_text_search.rq  geo.rq  simple.rq  simple_select.rq
scripts/templates/: rdf.ttl.j2
