[tool.poetry]
name = "rdf-delta-load-test"
version = "0.1.0"
description = ""
authors = ["Lawon Lewis <lawson@kurrawong.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
rdf-graph-gen = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
